# Citation_Data_Analysis

./: .env  .gitignore  README.md  app.py  citation_pagerank.ipynb  community_detection.py  docker-compose.yml  leiden.ipynb  main.py  metrics.py  pyproject.toml  pyrightconfig.json  ranking.ipynb  setup.py  utils.py
data_scraping/: openalex_scraper.py  test_openalex_scraper.py  utils.py
database/: __init__.py  connection.py  migrate.py  schema.sql  verify_migration.py
ranking/: __init__.py  data_loader.py  graph.py  main.py  pagerank.py  search.py  similarity.py  utils.py
results/: checkpoint_level_10.csv  ground_truth_300_paper_per_topic.csv  ground_truth_communities_leiden.csv  leiden_communities.csv  leiden_communities_small.csv
scripts/: girvan_newman.py  metrics.py
ui/: community_tab.py  config.py  data_access.py  search.py  search_tab.py
